premiere version sans texte

--- a/index.html
+++ b/index.html
@@ -3,9 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.bunny.net">
+    <link href="https://fonts.bunny.net/css?family=advent-pro:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|open-sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i" rel="stylesheet" />
     <title>Mon CV</title>
 </head>
 <body>
-    et voilà la premiere page de mon CV
+    <div class="header">Bienvenue sur mon CV</div>
+        <div>
+            <div class="card">Ma biographie
+                <img src="https://cdn.discordapp.com/attachments/1171173631414521876/1196771224894832670/ScreenShot-2024-01-15_22-11-45-FBB.jpg?ex=65d4868e&is=65c2118e&hm=761235970b8f95a215efa590e3ff2e95cfb7469a434f7dbf33653be56db74bee&" alt="">
+            </div>
+            <div class="card">Mes skills
+                <img src="https://cdn.discordapp.com/attachments/1171173631414521876/1196028712639021096/image.png?ex=65d1d30a&is=65bf5e0a&hm=2115b7c0375d4dcf9897c36b6530455374a0f51e33e8d8e6c3c7ffa59b9b37c7&" alt="">
+            </div>
+            <div class="card">Me contacter
+                <img src="https://cdn.discordapp.com/attachments/1171173631414521876/1190777604580589638/ScreenShot-2023-12-30_22-46-02-431.jpg?ex=65d12d90&is=65beb890&hm=22af29437102dd28d883a93215eded013e201413da5b1e4c625dd1932684a9c0&" alt="">
+            </div>
+            <div class="card">Bonus
+                <img src="https://cdn.discordapp.com/attachments/1171173631414521876/1187868966824186028/image.png?ex=65cfd32f&is=65bd5e2f&hm=e8fd55014bf00c04267ab1c71bf87ee281237ffd2087182e9f2ecd10ba0c57a8&" alt="">
+            </div>
+        </div>
+    <div class="footer">FOOTER</div>
 </body>
 </html>
