--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./reset.css">
     <link rel="preconnect" href="https://fonts.bunny.net">
     <link href="https://fonts.bunny.net/css?family=advent-pro:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|open-sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i" rel="stylesheet" />
     <title>Mon CV</title>
@@ -11,17 +12,33 @@
 <body>
     <div class="header">Bienvenue sur mon CV</div>
         <div>
-            <div class="card">Ma biographie
-                <img src="https://cdn.discordapp.com/attachments/1171173631414521876/1196771224894832670/ScreenShot-2024-01-15_22-11-45-FBB.jpg?ex=65d4868e&is=65c2118e&hm=761235970b8f95a215efa590e3ff2e95cfb7469a434f7dbf33653be56db74bee&" alt="">
+            <div class="card">
+                <img src="https://cdn.discordapp.com/attachments/1171173631414521876/1185199213777260574/image.png?ex=65cf5748&is=65bce248&hm=b68db2d393616e636eac28eaa4c996347490a95d4d3c1657b4ed4898059dade3&" alt="">
+                    <div class="card-content">
+                    Ma Biographie
+                    <br>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, dolor illum. Soluta, tenetur corporis magnam odit, quo libero facere explicabo maiores voluptate eveniet ducimus earum?
+                    </div>
             </div>
-            <div class="card">Mes skills
+            <div class="card">
                 <img src="https://cdn.discordapp.com/attachments/1171173631414521876/1196028712639021096/image.png?ex=65d1d30a&is=65bf5e0a&hm=2115b7c0375d4dcf9897c36b6530455374a0f51e33e8d8e6c3c7ffa59b9b37c7&" alt="">
+                <div class="card-content"><h1>Mes Skills</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, dolor illum. Soluta, tenetur corporis magnam odit, quo libero facere explicabo maiores voluptate eveniet ducimus earum?</p>
+                </div>
             </div>
-            <div class="card">Me contacter
+            <div class="card">
                 <img src="https://cdn.discordapp.com/attachments/1171173631414521876/1190777604580589638/ScreenShot-2023-12-30_22-46-02-431.jpg?ex=65d12d90&is=65beb890&hm=22af29437102dd28d883a93215eded013e201413da5b1e4c625dd1932684a9c0&" alt="">
+                <div class="card-content"><h1>Me Contacter</h1>
+                    <br>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, dolor illum. Soluta, tenetur corporis magnam odit, quo libero facere explicabo maiores voluptate eveniet ducimus earum?
+                </div>
             </div>
-            <div class="card">Bonus
+            <div class="card">
                 <img src="https://cdn.discordapp.com/attachments/1171173631414521876/1187868966824186028/image.png?ex=65cfd32f&is=65bd5e2f&hm=e8fd55014bf00c04267ab1c71bf87ee281237ffd2087182e9f2ecd10ba0c57a8&" alt="">
+                <div class="card-content"><h1>Bonus</h1>
+                    <br>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, dolor illum. Soluta, tenetur corporis magnam odit, quo libero facere explicabo maiores voluptate eveniet ducimus earum?
+                </div>
             </div>
         </div>
     <div class="footer">FOOTER</div>
