--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <div class="card-content">
                     <h1>Ma Biographie</h1>
                     <br>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, dolor illum. Soluta, tenetur corporis magnam odit, quo libero facere explicabo maiores voluptate eveniet ducimus earum?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, dolor illum. Soluta, tenetur corporis magnam odit, quo libero facere explicabo maiores voluptate eveniet ducifmus earum?</p>
                     </div>
             </div>
             <div class="card">
