hearder fix et largeur fix + ajout de quelques textes

--- a/index.html
+++ b/index.html
@@ -10,39 +10,59 @@
     <title>Mon CV</title>
 </head>
 <body>
-    <div class="header">Bienvenue sur mon CV</div>
-        <div>
-            <div class="card">
-                <img src="https://cdn.discordapp.com/attachments/1171173631414521876/1185199213777260574/image.png?ex=65cf5748&is=65bce248&hm=b68db2d393616e636eac28eaa4c996347490a95d4d3c1657b4ed4898059dade3&" alt="">
-                    <div class="card-content">
-                    <h1>Ma Biographie</h1>
-                    <br>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, dolor illum. Soluta, tenetur corporis magnam odit, quo libero facere explicabo maiores voluptate eveniet ducifmus earum?</p>
-                    </div>
-            </div>
-            <div class="card">
-                <img src="https://cdn.discordapp.com/attachments/1171173631414521876/1196028712639021096/image.png?ex=65d1d30a&is=65bf5e0a&hm=2115b7c0375d4dcf9897c36b6530455374a0f51e33e8d8e6c3c7ffa59b9b37c7&" alt="">
-                <div class="card-content"><h1>Mes Skills</h1>
-                    <br>
-                    <p>HTML &star;&star;&star;&star;&star;</p>
-                    <p>CSS &star;&star;&star;&star;&star;</p>
+    <div id="container">
+        <div class="header">Bienvenue sur mon CV / Portfolio</div>
+        <div class="card">
+            
+            <img src="https://cdn.discordapp.com/attachments/1171173631414521876/1185199213777260574/image.png?ex=65cf5748&is=65bce248&hm=b68db2d393616e636eac28eaa4c996347490a95d4d3c1657b4ed4898059dade3&" alt="">
+                <div class="card-content">
+                <h1>Ma Biographie</h1>
+                <br>
+                <p>J'ai commencé ma carrière dans le web en tant quer webdesigner suite à une formation à l'école IBGS à Paris.<br> J'ai travaillé en tant que freelance pendant près de 10 ans.<BR>Puis les aléas de la vie m'ont éloignés de mon métier pendant près de 10 ans. Après un bilan de compétences, me revoilà mais cette fois dans une autre branche : celle du développement web !</p>
+                <br>
+                <p>Je suis actuellement en formation via l'école O'clock qui m'enseigne tout ce qu'il faut pour devenir VOTRE developpeur web & mobile !</p>
                 </div>
-            </div>
-            <div class="card">
-                <img src="https://cdn.discordapp.com/attachments/1171173631414521876/1190777604580589638/ScreenShot-2023-12-30_22-46-02-431.jpg?ex=65d12d90&is=65beb890&hm=22af29437102dd28d883a93215eded013e201413da5b1e4c625dd1932684a9c0&" alt="">
-                <div class="card-content"><h1>Me Contacter</h1>
-                    <br>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, dolor illum. Soluta, tenetur corporis magnam odit, quo libero facere explicabo maiores voluptate eveniet ducimus earum?</p>
+        </div>
+        <div class="card">
+            <img src="https://cdn.discordapp.com/attachments/1171173631414521876/1196028712639021096/image.png?ex=65d1d30a&is=65bf5e0a&hm=2115b7c0375d4dcf9897c36b6530455374a0f51e33e8d8e6c3c7ffa59b9b37c7&" alt="">
+            <div class="card-content"><h1>Mes Skills</h1>
+                <br>
+                <p>HTML</p>
+                <div class="container">
+                <div class="skills html">60%</div>
                 </div>
-            </div>
-            <div class="card">
-                <img src="https://cdn.discordapp.com/attachments/1171173631414521876/1187868966824186028/image.png?ex=65cfd32f&is=65bd5e2f&hm=e8fd55014bf00c04267ab1c71bf87ee281237ffd2087182e9f2ecd10ba0c57a8&" alt="">
-                <div class="card-content"><h1>Bonus</h1>
-                    <br>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, dolor illum. Soluta, tenetur corporis magnam odit, quo libero facere explicabo maiores voluptate eveniet ducimus earum?</p>
+
+                <p>CSS</p>
+                <div class="container">
+                <div class="skills css">50%</div>
+                </div>
+
+                <p>JavaScript</p>
+                <div class="container">
+                <div class="skills js">5%</div>
+                </div>
+
+                <p>PHP</p>
+                <div class="container">
+                <div class="skills php">5%</div>
                 </div>
             </div>
         </div>
+        <div class="card">
+            <img src="https://cdn.discordapp.com/attachments/1171173631414521876/1190777604580589638/ScreenShot-2023-12-30_22-46-02-431.jpg?ex=65d12d90&is=65beb890&hm=22af29437102dd28d883a93215eded013e201413da5b1e4c625dd1932684a9c0&" alt="">
+            <div class="card-content"><h1>Mes Experiences</h1>
+                <br>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, dolor illum. Soluta, tenetur corporis magnam odit, quo libero facere explicabo maiores voluptate eveniet ducimus earum?</p>
+            </div>
+        </div>
+        <div class="card">
+            <img src="https://cdn.discordapp.com/attachments/1171173631414521876/1187868966824186028/image.png?ex=65cfd32f&is=65bd5e2f&hm=e8fd55014bf00c04267ab1c71bf87ee281237ffd2087182e9f2ecd10ba0c57a8&" alt="">
+            <div class="card-content"><h1>Me Contacter</h1>
+                <br>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, dolor illum. Soluta, tenetur corporis magnam odit, quo libero facere explicabo maiores voluptate eveniet ducimus earum?</p>
+            </div>
+        </div>
+    </div>
     <div class="footer">FOOTER</div>
 </body>
 </html>
