--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
 <body>
     <section class="sec-01">
         <div class="container">
-            <h2 class="main-title">Bienvenue !</h2>
+            <h2 class="maain-title">Mathieu COZANET MERLINGEAS</h2>
             <div class="content">
                 <div class="image">
                     <img src="./images/img1.jpg" alt="">
                 </div>
                 <div class="text-box">
-                    <h3>Lorem Ipsum</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci quasi eligendi, eveniet repellendus perferendis sint eum accusantium illum? Soluta quo sed delectus. Minima fuga vero officia magnam quisquam ea rerum? Aspernatur minima perferendis quas quia dolores, magnam mollitia eum nulla obcaecati? Architecto voluptas iusto ipsam officia ad accusantium sint nesciunt?</p>
+                    <h3>Bienvenue !!!</h3>
+                    <p>Je suis Mathieu COZANET MERLINGEAS, un professionnel passionné du digital et de la création depuis plus de deux décennies. Mon parcours dans le domaine du design web a débuté en 2004, une époque où le web était en pleine effervescence et où les possibilités semblaient infinies.</p>
+                    <a href="./about.html">En savoir plus</a>
                 </div>
             </div>
             <div class="media-icons">
