rectif main title

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <section class="sec-01">
         <div class="container">
-            <h2 class="maain-title">Mathieu COZANET MERLINGEAS</h2>
+            <h2 class="main-title">Mathieu COZANET MERLINGEAS</h2>
             <div class="content">
                 <div class="image">
                     <img src="./images/img1.jpg" alt="">
