changement images et ajout navbar à compléter

--- a/index.html
+++ b/index.html
@@ -10,12 +10,28 @@
     <title>Portefolio Mathieu COZANET MERLINGEAS</title>
 </head>
 <body>
+    <header>
+    <div class="navbar">
+        <div class="logo">
+            <a href="./index.html"></a>
+        </div>
+        <ul class="links">
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./about.html">Bio</a></li>
+            <li><a href="./realisations.html">Folio</a></li>
+            <li><a href="./contact.html">Contact</a></li>
+        </ul>
+        <div class="toggle_btn">
+            <i class="fa-solid fa-bars"></i>
+        </div>
+    </div>
+    </header>
     <section class="sec-01">
         <div class="container">
             <h2 class="main-title">Mathieu COZANET MERLINGEAS</h2>
             <div class="content">
                 <div class="image">
-                    <img src="./images/img1.jpg" alt="">
+                    <img src="./images/apo3.jpg" alt="">
                 </div>
                 <div class="text-box">
                     <h3>Bienvenue !!!</h3>
@@ -24,16 +40,16 @@
                 </div>
             </div>
             <div class="media-icons">
-                <a href="" class="icon"><i class="fab fa-facebook"></i></a>
-                <a href="" class="icon"><i class="fab fa-instagram"></i></a>
-                <a href="" class="icon"><i class="fab fa-twitter"></i></a>
-                <a href="" class="icon"><i class="fab fa-github"></i></a>
+                <a href="https://www.facebook.com/apOwned" class="icon"><i class="fab fa-facebook"></i></a>
+                <a href="https://www.linkedin.com/in/mathieu-cozanet-merlingeas-1b8a562aa/" class="icon"><i class="fab fa-linkedin"></i></a>
+                <a href="https://twitter.com/CozanetMathieu" class="icon"><i class="fab fa-twitter"></i></a>
+                <a href="https://github.com/mathieu-cozanet" class="icon"><i class="fab fa-github"></i></a>
             </div>
         </div>
     </section>
     <section class="sec-02">
         <div class="container">
-            <h3 class="section-title">Lorem Ipsum</h3>
+            <h3 class="section-title">Folio</h3>
             <div class="content">
                 <div class="image">
                     <img src="./images/img2.jpg" alt="">
@@ -47,7 +63,7 @@
     </section>
     <section class="sec-03">
         <div class="container">
-            <h3 class="section-title">Lorem Ipsum</h3>
+            <h3 class="section-title">Contact</h3>
             <div class="content">
                 <div class="media-info">
                     <li><a href="#"><i class="fab fa-facebook"> Facebook</i></a></li>
@@ -57,7 +73,7 @@
                     <li><a href="#"><i class="fab fa-linkedin"> LinkedIN</i></a></li>
                 </div>
                 <div class="image">
-                    <img src="./images/img3.png" alt="">
+                    <img src="./images/apo_bw2.jpg" alt="">
                 </div>
             </div>
         </div>
