--- a/about.html
+++ b/about.html
@@ -18,11 +18,12 @@
                     <img src="./images/apo.jpg" alt="">
                 </div>
                 <div class="info">
-                    <h4 class="info-title">Biographie</h4>
                     <p>Je suis Mathieu COZANET MERLINGEAS, un professionnel passionné du digital et de la création depuis plus de deux décennies. Mon parcours dans le domaine du design web a débuté en 2004, une époque où le web était en pleine effervescence et où les possibilités semblaient infinies. Pendant près d'une décennie, j'ai exercé en tant que webdesigner, façonnant des expériences en ligne uniques et engageantes. <br><br>
                     Mon expertise s'est particulièrement affirmée dans le domaine de l'animation Flash, où j'ai perfectionné mes compétences en ActionScript pour donner vie à des interfaces interactives et dynamiques. Cette période a été pour moi une véritable école de créativité et de technique, où j'ai appris à marier l'esthétique et la fonctionnalité de manière innovante. <br><br>
-                    Cependant, avec l'évolution rapide des technologies et des standards du web, j'ai ressenti le besoin d'explorer de nouveaux horizons pour rester à la pointe de mon domaine. C'est ainsi que je me suis lancé dans une formation intensive chez "O'clock", une référence dans le domaine de la formation en développement web et mobile. <br><br>
-                    Actuellement, je me consacre pleinement à ma reconversion professionnelle, avec pour objectif de devenir un développeur polyvalent et compétent, spécialisé dans l'écosystème React. Cette technologie moderne et dynamique offre des possibilités infinies pour la création d'applications web et mobiles performantes et évolutives. <br><br>
+                    Cependant, avec l'évolution rapide des technologies et des standards du web, j'ai ressenti le besoin d'explorer de nouveaux horizons pour rester à la pointe de mon domaine. C'est ainsi que je me suis lancé dans une formation intensive chez "O'clock", une référence dans le domaine de la formation en développement web et mobile.
+                    <br><br>
+                    Actuellement, je me consacre pleinement à ma reconversion professionnelle, avec pour objectif de devenir un développeur polyvalent et compétent, spécialisé dans le framework React. Cette technologie moderne et dynamique offre des possibilités infinies pour la création d'applications web et mobiles performantes et évolutives.
+                    <br><br>
                     Je suis convaincu que mon expérience antérieure en webdesign et en animation, combinée à mes nouvelles compétences en développement, me permettront de proposer des solutions innovantes et de qualité, répondant aux besoins et aux exigences des utilisateurs et des clients d'aujourd'hui.</p>
                 </div>
             </div>
