test de la navbar

--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
     <title>Portefolio Mathieu COZANET MERLINGEAS</title>
 </head>
 <body>
+    <!-- <body background="./images/higher_architecture__v4_by_bergionstyle_dglvmhl-fullview.jpg"></body> -->
     <header>
     <div class="navbar">
         <div class="logo">
-            <a href="./index.html"></a>
+            <a href="./index.html">Mathieucoza.net</a>
         </div>
         <ul class="links">
             <li><a href="./index.html">Home</a></li>
@@ -24,6 +25,13 @@
         <div class="toggle_btn">
             <i class="fa-solid fa-bars"></i>
         </div>
+    </div>
+
+    <div class="dropdown_menu">
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./about.html">Bio</a></li>
+        <li><a href="./realisations.html">Folio</a></li>
+        <li><a href="./contact.html">Contact</a></li>
     </div>
     </header>
     <section class="sec-01">
@@ -79,5 +87,6 @@
         </div>
     </section>
     <script src="./js/reveal.js"></script>
+    <script src="./js/toggle.js"></script>
 </body>
 </html>
