--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://unpkg.com/scrollreveal"></script>
     
     <title>Portefolio Mathieu COZANET MERLINGEAS</title>
@@ -13,6 +14,7 @@
 <body>
     <!-- <body background="./images/higher_architecture__v4_by_bergionstyle_dglvmhl-fullview.jpg"></body> -->
     <header>
+        <?php $variable = "index"; ?>
     <div class="navbar">
         <div class="logo">
             <a href="./index.html">Mathieucoza.net</a>
@@ -89,5 +91,6 @@
     </section>
     <script src="./js/reveal.js"></script>
     <script src="./js/toggle.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
